--- a/static/STELLAR/about.html
+++ b/static/STELLAR/about.html
@@ -1,182 +1,249 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="image/favicon.png" type="image/png">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="icon" href="image/favicon.png" type="image/png" />
     <title>STELLAR HOTEL</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="STELLAR/css/bootstrap.css">
-    <link rel="stylesheet" href="STELLAR/vendors/linericon/style.css">
-    <link rel="stylesheet" href="STELLAR/css/font-awesome.min.css">
-    <link rel="stylesheet" href="STELLAR/vendors/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="STELLAR/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="STELLAR/vendors/nice-select/css/nice-select.css">
-    <link rel="stylesheet" href="STELLAR/vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="STELLAR/css/bootstrap.css" />
+    <link rel="stylesheet" href="STELLAR/vendors/linericon/style.css" />
+    <link rel="stylesheet" href="STELLAR/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="STELLAR/vendors/owl-carousel/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="STELLAR/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="STELLAR/vendors/nice-select/css/nice-select.css"
+    />
+    <link
+      rel="stylesheet"
+      href="STELLAR/vendors/owl-carousel/owl.carousel.min.css"
+    />
     <!-- main css -->
-    <link rel="stylesheet" href="STELLAR/css/style.css">
-    <link rel="stylesheet" href="STELLAR/css/responsive.css">
-</head>
+    <link rel="stylesheet" href="STELLAR/css/style.css" />
+    <link rel="stylesheet" href="STELLAR/css/responsive.css" />
+  </head>
 
-<body>
+  <body>
     <!--================Header Area =================-->
     <header class="header_area">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="index.html">STELLAR</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active" onclick="redirects('/')">Home</li>
-                        <li class="nav-item" onclick="redirects('/about')">About us</li>
-                        <li class="nav-item" onclick="redirects('/accomodation')">Accomodation</li>
-                        <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
-                        <li class="nav-item" onclick="redirects('/contact')">Contact
-                        </li>
-                        <li class="nav-item sign" onclick="redirects('/login')">Sign in</li>
-                        <li class="nav-item sign" onclick="redirects('/intranet')">Intranet</li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <a class="navbar-brand logo_h" href="index.html">STELLAR</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div
+            class="collapse navbar-collapse offset"
+            id="navbarSupportedContent"
+          >
+            <ul class="nav navbar-nav menu_nav ml-auto">
+              <li class="nav-item" onclick="redirects('/')">Home</li>
+              <li class="nav-item active" onclick="redirects('/about')">
+                About us
+              </li>
+              <li class="nav-item" onclick="redirects('/accomodation')">
+                Accomodation
+              </li>
+              <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
+              <li class="nav-item" onclick="redirects('/contact')">Contact</li>
+              <li class="nav-item sign" onclick="redirects('/login')">
+                Sign in
+              </li>
+              <li class="nav-item sign" onclick="redirects('/intranet')">
+                Intranet
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <!--================Header Area =================-->
 
     <!--================Breadcrumb Area =================-->
     <section class="breadcrumb_area">
-        <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background="">
+      <div
+        class="overlay bg-parallax"
+        data-stellar-ratio="0.8"
+        data-stellar-vertical-offset="0"
+        data-background=""
+      ></div>
+      <div class="container">
+        <div class="page-cover text-center">
+          <h2 class="page-cover-tittle">About Us</h2>
+          <ol class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <li class="active">About</li>
+          </ol>
         </div>
-        <div class="container">
-            <div class="page-cover text-center">
-                <h2 class="page-cover-tittle">About Us</h2>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active">About</li>
-                </ol>
-            </div>
-        </div>
+      </div>
     </section>
+    fv
     <!--================Breadcrumb Area =================-->
 
     <!--================ About History Area  =================-->
     <section class="about_history_area section_gap">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 d_flex align-items-center">
-                    <div class="about_content ">
-                        <h2 class="title title_color">About Us <br>Our History<br>Mission & Vision</h2>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards especially in the workplace. That’s why it’s crucial that, as women, our behavior
-                            on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-                        <a href="#" class="button_hover theme_btn_two">Request Custom Price</a>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-fluid" src="image/gallery/03.jpg" alt="img">
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d_flex align-items-center">
+            <div class="about_content">
+              <h2 class="title title_color">
+                About Us <br />Our History<br />Mission & Vision
+              </h2>
+              <p>
+                inappropriate behavior is often laughed off as “boys will be
+                boys,” women face higher conduct standards especially in the
+                workplace. That’s why it’s crucial that, as women, our behavior
+                on the job is beyond reproach. inappropriate behavior is often
+                laughed.
+              </p>
+              <a href="#" class="button_hover theme_btn_two"
+                >Request Custom Price</a
+              >
             </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              class="img-fluid"
+              src="STELLAR/image/gallery/03.jpg"
+              alt="img"
+            />
+          </div>
         </div>
+      </div>
     </section>
     <!--================ About History Area  =================-->
     <!--================ start footer Area  =================-->
     <footer class="footer-area section_gap">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3  col-md-6 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h6 class="footer_title">About Agency</h6>
-                        <p>The world has become so fast paced that people don’t want to stand by reading a page of
-                            information, they would much rather look at a presentation and understand the message. It
-                            has come to a point </p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h6 class="footer_title">Navigation Links</h6>
-                        <div class="row">
-                            <div class="col-4">
-                                <ul class="list_style">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Feature</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Portfolio</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-4">
-                                <ul class="list_style">
-                                    <li><a href="#">Team</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-footer-widget">
-                        <h6 class="footer_title">Newsletter</h6>
-                        <p>For business professionals caught between high OEM price and mediocre print and graphic
-                            output, </p>
-                        <div id="mc_embed_signup">
-                            <form target="_blank"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                method="get" class="subscribe_form relative">
-                                <div class="input-group d-flex flex-row">
-                                    <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                    <button class="btn sub-btn"><span class="lnr lnr-location"></span></button>
-                                </div>
-                                <div class="mt-10 info"></div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-footer-widget instafeed">
-                        <h6 class="footer_title">InstaFeed</h6>
-                        <ul class="list_style instafeed d-flex flex-wrap">
-                            <li><img src="image/instagram/Image-01.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-02.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-03.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-04.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-05.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-06.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-07.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-08.jpg" alt=""></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6 class="footer_title">About Agency</h6>
+              <p>
+                The world has become so fast paced that people don’t want to
+                stand by reading a page of information, they would much rather
+                look at a presentation and understand the message. It has come
+                to a point
+              </p>
             </div>
-            <div class="border_line"></div>
-            <div class="row footer-bottom d-flex justify-content-between align-items-center">
-                <p class="col-lg-8 col-sm-12 footer-text m-0">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script> All rights reserved | made by DEVSTORM
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-                <div class="col-lg-4 col-sm-12 footer-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-behance"></i></a>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6 class="footer_title">Navigation Links</h6>
+              <div class="row">
+                <div class="col-4">
+                  <ul class="list_style">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Feature</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                  </ul>
                 </div>
+                <div class="col-4">
+                  <ul class="list_style">
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+              <h6 class="footer_title">Newsletter</h6>
+              <p>
+                For business professionals caught between high OEM price and
+                mediocre print and graphic output,
+              </p>
+              <div id="mc_embed_signup">
+                <form
+                  target="_blank"
+                  action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                  method="get"
+                  class="subscribe_form relative"
+                >
+                  <div class="input-group d-flex flex-row">
+                    <input
+                      name="EMAIL"
+                      placeholder="Email Address"
+                      onfocus="this.placeholder = ''"
+                      onblur="this.placeholder = 'Email Address '"
+                      required=""
+                      type="email"
+                    />
+                    <button class="btn sub-btn">
+                      <span class="lnr lnr-location"></span>
+                    </button>
+                  </div>
+                  <div class="mt-10 info"></div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget instafeed">
+              <h6 class="footer_title">InstaFeed</h6>
+              <ul class="list_style instafeed d-flex flex-wrap">
+                <li><img src="image/instagram/Image-01.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-02.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-03.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-04.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-05.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-06.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-07.jpg" alt="" /></li>
+                <li><img src="image/instagram/Image-08.jpg" alt="" /></li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <div class="border_line"></div>
+        <div
+          class="row footer-bottom d-flex justify-content-between align-items-center"
+        >
+          <p class="col-lg-8 col-sm-12 footer-text m-0">
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            All rights reserved | made by DEVSTORM
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          </p>
+          <div class="col-lg-4 col-sm-12 footer-social">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-behance"></i></a>
+          </div>
+        </div>
+      </div>
     </footer>
     <!--================ End footer Area  =================-->
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -192,6 +259,5 @@
     <script src="js/stellar.js"></script>
     <script src="vendors/lightbox/simpleLightbox.min.js"></script>
     <script src="js/custom.js"></script>
-</body>
-
+  </body>
 </html>
