--- a/static/STELLAR/accomodation.html
+++ b/static/STELLAR/accomodation.html
@@ -8,15 +8,15 @@
     <link rel="icon" href="image/favicon.png" type="image/png">
     <title>STELLAR HOTEL</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="vendors/linericon/style.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
-    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="STELLAR/css/bootstrap.css">
+    <link rel="stylesheet" href="STELLAR/vendors/linericon/style.css">
+    <link rel="stylesheet" href="STELLAR/css/font-awesome.min.css">
+    <link rel="stylesheet" href="STELLAR/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="STELLAR/vendors/nice-select/css/nice-select.css">
+    <link rel="stylesheet" href="STELLAR/vendors/owl-carousel/owl.carousel.min.css">
     <!-- main css -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="STELLAR/css/style.css">
+    <link rel="stylesheet" href="STELLAR/css/responsive.css">
 </head>
 
 <body>
@@ -36,11 +36,20 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="accomodation.html">Accomodation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item active" onclick="redirects('/')"><a class="nav-link"
+                                href="STELLAR/index.html">Home</a></li>
+                        <li class="nav-item" onclick="redirects('/about.html')"><a class="nav-link"
+                                href="STELLAR/about.html">About us</a></li>
+                        <li class="nav-item" onclick="redirects('/accomodation.html')"><a class="nav-link"
+                                href="STELLAR/accomodation.html">Accomodation</a></li>
+                        <li class="nav-item" onclick="redirects('/gallery.html')"><a class="nav-link"
+                                href="STELLAR/gallery.html">Gallery</a></li>
+                        <li class="nav-item" onclick="redirects('/contact.html')"><a class="nav-link"
+                                href="STELLAR/contact.html">Contact</a></li>
+                        <li class="nav-item" onclick="redirects('/login.html')"><a class="nav-link sign"
+                                href="STELLAR/login/login.html">Sign in</a></li>
+                        <li class="nav-item" onclick="redirects('/Intranet')"><a class="nav-link sign"
+                                href="STELLAR/">Intranet</a></li>
                     </ul>
                 </div>
             </nav>
@@ -216,17 +225,17 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="js/jquery.ajaxchimp.min.js"></script>
-    <script src="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.js"></script>
-    <script src="vendors/nice-select/js/jquery.nice-select.js"></script>
-    <script src="js/mail-script.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="vendors/lightbox/simpleLightbox.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="STELLAR/js/jquery-3.2.1.min.js"></script>
+    <script src="STELLAR/js/popper.js"></script>
+    <script src="STELLAR/js/bootstrap.min.js"></script>
+    <script src="STELLAR/vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="STELLAR/js/jquery.ajaxchimp.min.js"></script>
+    <script src="STELLAR/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.js"></script>
+    <script src="STELLAR/vendors/nice-select/js/jquery.nice-select.js"></script>
+    <script src="STELLAR/js/mail-script.js"></script>
+    <script src="STELLAR/js/stellar.js"></script>
+    <script src="STELLAR/vendors/lightbox/simpleLightbox.min.js"></script>
+    <script src="STELLAR/js/custom.js"></script>
 </body>
 
 </html>
