--- a/static/STELLAR/contact.html
+++ b/static/STELLAR/contact.html
@@ -36,11 +36,20 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="accomodation.html">Accomodation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item active" onclick="redirects('/')"><a class="nav-link"
+                                href="STELLAR/index.html">Home</a></li>
+                        <li class="nav-item" onclick="redirects('/about.html')"><a class="nav-link"
+                                href="STELLAR/about.html">About us</a></li>
+                        <li class="nav-item" onclick="redirects('/accomodation.html')"><a class="nav-link"
+                                href="STELLAR/accomodation.html">Accomodation</a></li>
+                        <li class="nav-item" onclick="redirects('/gallery.html')"><a class="nav-link"
+                                href="STELLAR/gallery.html">Gallery</a></li>
+                        <li class="nav-item" onclick="redirects('/contact.html')"><a class="nav-link"
+                                href="STELLAR/contact.html">Contact</a></li>
+                        <li class="nav-item" onclick="redirects('/login.html')"><a class="nav-link sign"
+                                href="STELLAR/login/login.html">Sign in</a></li>
+                        <li class="nav-item" onclick="redirects('/Intranet')"><a class="nav-link sign"
+                                href="STELLAR/">Intranet</a></li>
                     </ul>
                 </div>
             </nav>
