--- a/static/STELLAR/about.html
+++ b/static/STELLAR/about.html
@@ -37,20 +37,14 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active" onclick="redirects('/')"><a class="nav-link"
-                                href="STELLAR/index.html">Home</a></li>
-                        <li class="nav-item" onclick="redirects('/about.html')"><a class="nav-link"
-                                href="STELLAR/about.html">About us</a></li>
-                        <li class="nav-item" onclick="redirects('/accomodation.html')"><a class="nav-link"
-                                href="STELLAR/accomodation.html">Accomodation</a></li>
-                        <li class="nav-item" onclick="redirects('/gallery.html')"><a class="nav-link"
-                                href="STELLAR/gallery.html">Gallery</a></li>
-                        <li class="nav-item" onclick="redirects('/contact.html')"><a class="nav-link"
-                                href="STELLAR/contact.html">Contact</a></li>
-                        <li class="nav-item" onclick="redirects('/login.html')"><a class="nav-link sign"
-                                href="STELLAR/login/login.html">Sign in</a></li>
-                        <li class="nav-item" onclick="redirects('/Intranet')"><a class="nav-link sign"
-                                href="STELLAR/">Intranet</a></li>
+                        <li class="nav-item active" onclick="redirects('/')">Home</li>
+                        <li class="nav-item" onclick="redirects('/about')">About us</li>
+                        <li class="nav-item" onclick="redirects('/accomodation')">Accomodation</li>
+                        <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
+                        <li class="nav-item" onclick="redirects('/contact')">Contact
+                        </li>
+                        <li class="nav-item" onclick="redirects('/login')">Sign in</li>
+                        <li class="nav-item" onclick="redirects('/intranet')">Intranet</li>
                     </ul>
                 </div>
             </nav>
@@ -186,6 +180,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="/index.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
