--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -43,8 +43,8 @@
                         <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
                         <li class="nav-item" onclick="redirects('/contact')">Contact
                         </li>
-                        <li class="nav-item" onclick="redirects('/login')">Sign in</li>
-                        <li class="nav-item" onclick="redirects('/intranet')">Intranet</li>
+                        <li class="nav-item sign" onclick="redirects('/login')">Sign in</li>
+                        <li class="nav-item sign" onclick="redirects('/intranet')">Intranet</li>
                     </ul>
                 </div>
             </nav>
