--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -77,18 +77,12 @@
                                     <div class="book_tabel_item">
                                         <div class="form-group">
                                             <div class='input-group date' id='datetimepicker11'>
-                                                <input type='text' class="form-control" placeholder="Arrival Date" />
-                                                <span class="input-group-addon">
-                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                </span>
+                                                <input type='date' class="form-control" placeholder="Arrival Date" name="start_date" />
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class='input-group date' id='datetimepicker1'>
-                                                <input type='text' class="form-control" placeholder="Departure Date" />
-                                                <span class="input-group-addon">
-                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                </span>
+                                                <input type='date' class="form-control" placeholder="Departure Date" name="end_date"/>
                                             </div>
                                         </div>
                                     </div>
@@ -114,8 +108,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="book_tabel_item">
-                                        <a class="book_now_btn button_hover" href="#">Book Now</a>
+                                    <div class="book_tabel_item" id="boutton">
+                                        <a class="book_now_btn button_hover" dhref="#">Book Now</a>
                                     </div>
                                 </div>
                             </div>
