--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -92,27 +92,28 @@
                                 <div class="col-md-4">
                                     <div class="book_tabel_item">
                                         <div class="input-group">
-                                            <select class="wide" id="type-reservation">
+                                            <select class="wide" id="type-reservation" name="room-conf">
                                                 <option value="room">Room</option>
                                                 <option value="conference">Conference room</option>
                                             </select>
                                         </div>
                                         <div class="input-group">
                                             <select class="wide">
-                                                <option value="1">Tananarive</option>
-                                                <option value="2">Tamatave</option>
-                                                <option value="3">Majunga</option>
-                                                <option value="4">Fianaratsoa</option>
-                                                <option value="5">Diego</option>
-                                                <option value="6">Tulear</option>
+                                                <option value="Tananarive">Tananarive</option>
+                                                <option value="Tamatave">Tamatave</option>
+                                                <option value="Majunga">Majunga</option>
+                                                <option value="Fianaratsoa">Fianaratsoa</option>
+                                                <option value="Diego">Diego</option>
+                                                <option value="Tulear">Tulear</option>
                                             </select>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="book_tabel_item" id="boutton">
+                                    <button class="book_tabel_item" id="boutton"
+                                        style="border: none; background: transparent;" type="submit">
                                         <a class="book_now_btn button_hover" dhref="#">Book Now</a>
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
