--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -98,11 +98,11 @@
                                             </select>
                                         </div>
                                         <div class="input-group">
-                                            <select class="wide">
-                                                <option value="Tananarive">Tananarive</option>
-                                                <option value="Tamatave">Tamatave</option>
-                                                <option value="Majunga">Majunga</option>
-                                                <option value="Fianaratsoa">Fianaratsoa</option>
+                                            <select class="wide" name="city">
+                                                <option value="antananarivo">Tananarive</option>
+                                                <option value="tamatave">Tamatave</option>
+                                                <option value="tajunga">Majunga</option>
+                                                <option value="fianaratsoa">Fianaratsoa</option>
                                                 <option value="Diego">Diego</option>
                                                 <option value="Tulear">Tulear</option>
                                             </select>
@@ -111,7 +111,8 @@
                                 </div>
                                 <div class="col-md-4">
                                     <button class="book_tabel_item" id="boutton"
-                                        style="border: none; background: transparent;" type="submit">
+                                        style="border: none; background: transparent;" type="submit"
+                                        onclick="book(event)">
                                         <a class="book_now_btn button_hover" dhref="#">Book Now</a>
                                     </button>
                                 </div>
