--- a/static/STELLAR/login/login.html
+++ b/static/STELLAR/login/login.html
@@ -121,6 +121,13 @@
         <input type="text" placeholder="Firstname" name="name">
         <input type="text" placeholder="Lastname" name="lname">
         <input type="text" placeholder="Email" name="mail">
+        <select name="gender" id="">
+            <option value="M">Male</option>
+            <option value="F">Femelle</option>
+        </select>
+        <input type="text" placeholder="Phone number" name="phone_number">
+        <input type="text" placeholder="Emergency contact" name="emergency">
+        <input type="text" placeholder="Nationality" name="nation">
         <input type="password" placeholder="Password" name="password">
         <button id="subm" type="submit">Login</button>
     </form>
