--- a/static/STELLAR/accomodation.html
+++ b/static/STELLAR/accomodation.html
@@ -72,6 +72,7 @@
 
   <!--================ Accomodation Area  =================-->
   <section class="accomodation_area section_gap">
+
     <div class="container">
       <div class="section_title text-center">
         <h2 class="title_color">Special Accomodation</h2>
@@ -80,7 +81,10 @@
           is becoming extremely fast,
         </p>
       </div>
-      <div class="row mb_30" id="list_data">
+
+      <div class="row mb_30" id="list_data2"></div>
+
+      <div class="row mb_30" id="list_data1">
 
         <div class="col-lg-3 col-sm-6">
           <div class="accomodation_item text-center">
@@ -132,6 +136,19 @@
               <h4 class="sec_h4">Family</h4>
             </a>
             <h5>50000Ar<small>/night</small></h5>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="accomodation_item text-center">
+            <div class="hotel_img">
+              <img src="STELLAR/image/room4.jpg" alt="" style="width: 403px" />
+              <a href="#" class="btn theme_btn button_hover">Book Now</a>
+            </div>
+            <a href="#">
+              <h4 class="sec_h4">Conference room</h4>
+            </a>
+            <h5>30000Ar<small>/night</small></h5>
           </div>
         </div>
 
@@ -240,6 +257,9 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script>
+    const socket = io();
+  </script>
   <script src="/index.js"></script>
   <script src="STELLAR/js/jquery-3.2.1.min.js"></script>
   <script src="STELLAR/js/popper.js"></script>
