--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -437,6 +437,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script>
+        const socket = io();
+    </script>
     <script src="/index.js"></script>
     <script src="STELLAR/js/jquery-3.2.1.min.js"></script>
     <script src="STELLAR/js/popper.js"></script>
