--- a/static/STELLAR/accomodation.html
+++ b/static/STELLAR/accomodation.html
@@ -37,14 +37,8 @@
           <ul class="nav navbar-nav menu_nav ml-auto">
             <li class="nav-item" onclick="redirects('/')">Home</li>
             <li class="nav-item" onclick="redirects('/about')">About us</li>
-            <li class="nav-item active" onclick="redirects('/accomodation')">
-              Accomodation
-            </li>
             <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
             <li class="nav-item" onclick="redirects('/contact')">Contact</li>
-            <li class="nav-item sign" onclick="redirects('/login')">
-              Sign in
-            </li>
             <li class="nav-item sign" onclick="redirects('/intranet')">
               Intranet
             </li>
@@ -123,6 +117,32 @@
             </a>
             <h5>90000Ar<small>/night</small></h5>
             <h7>"Jacuzzi and restaurant included"</h7>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="accomodation_item text-center">
+            <div class="hotel_img">
+              <img src="STELLAR/image/room4.jpg" alt="" style="width: 403px" />
+              <a href="#" class="btn theme_btn button_hover">Book Now</a>
+            </div>
+            <a href="#">
+              <h4 class="sec_h4">Family</h4>
+            </a>
+            <h5>50000Ar<small>/night</small></h5>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="accomodation_item text-center">
+            <div class="hotel_img">
+              <img src="STELLAR/image/room4.jpg" alt="" style="width: 403px" />
+              <a href="#" class="btn theme_btn button_hover">Book Now</a>
+            </div>
+            <a href="#">
+              <h4 class="sec_h4">Family</h4>
+            </a>
+            <h5>50000Ar<small>/night</small></h5>
           </div>
         </div>
 
