--- a/static/STELLAR/gallery.html
+++ b/static/STELLAR/gallery.html
@@ -38,9 +38,6 @@
           <ul class="nav navbar-nav menu_nav ml-auto">
             <li class="nav-item" onclick="redirects('/')">Home</li>
             <li class="nav-item" onclick="redirects('/about')">About us</li>
-            <li class="nav-item" onclick="redirects('/accomodation')">
-              Accomodation
-            </li>
             <li class="nav-item active" onclick="redirects('/gallery')">Gallery</li>
             <li class="nav-item" onclick="redirects('/contact')">Contact</li>
             <li class="nav-item sign" onclick="redirects('/login')">
@@ -75,7 +72,7 @@
   <section class="gallery_area section_gap">
     <div class="container">
       <div class="section_title text-center">
-        <h2 class="title_color">Royal Hotel Gallery</h2>
+        <h2 class="title_color">Skyllar Gallery</h2>
         <p>Who are in extremely love with eco friendly system.</p>
       </div>
       <div class="row imageGallery1" id="gallery">
@@ -269,7 +266,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer>//
   <!--================ End footer Area  =================-->
 
   <!-- Optional JavaScript -->
