--- a/static/STELLAR/index.html
+++ b/static/STELLAR/index.html
@@ -39,7 +39,6 @@
                     <ul class="nav navbar-nav menu_nav ml-auto">
                         <li class="nav-item active" onclick="redirects('/')">Home</li>
                         <li class="nav-item" onclick="redirects('/about')">About us</li>
-                        <li class="nav-item" onclick="redirects('/accomodation')">Accomodation</li>
                         <li class="nav-item" onclick="redirects('/gallery')">Gallery</li>
                         <li class="nav-item" onclick="redirects('/contact')">Contact
                         </li>
@@ -75,7 +74,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="book_tabel_item">
-                                        <div class="form-group">
+                                        <div class="form-group" id="m">
                                             <div class='input-group date' id='datetimepicker11'>
                                                 <input type='date' class="form-control" placeholder="Arrival Date"
                                                     name="start_date" />
@@ -192,7 +191,7 @@
         </div>
         <div class="container">
             <div class="section_title text-center">
-                <h2 class="title_w">Royal Facilities</h2>
+                <h2 class="title_w">Skyllar Facilities</h2>
                 <p>Who are in extremely love with eco friendly system.</p>
             </div>
             <div class="row mb_30">
